#26: Fixed AWS Glue findings (#27)
Fixes #26

Co-authored-by: chπ <christoph.pirkl@exasol.com>